--- a/aula03/package.json
+++ b/aula03/package.json
@@ -5,7 +5,7 @@
   "main": "at10-expressHTTP.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon at10-expressHTTP.js"
+    "start": "nodemon at11-ExpressParametros.js"
   },
   "keywords": [
     "node",
